Finish recommendation and scrutinize
