# routes/shorts.js
@@ -30,7 +30,7 @@ router.route('/disDownvote/:id').post(disDownvote)
 router.route('/view/:id').post(viewShort)
 router.route('/set-view-portion/:id').post(setShortViewPortion)
 router.route('/recommend').get(getRecommends)
-router.route('/scrutinize/:id').get(scrutinize)
+router.route('/scrutinize/:id').post(scrutinize)
 router.route('/').get(getAllShortsOfUser)
 router.route('/:id').get(getShort)
 
